Kubernetes/service/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-svc
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
  - port: 8080 
    targetPort: 80
